# Multi-Node-Distributed-File-Scanning-System-C-MPI-

./: CMakeLists.txt  README.md  par_meta.csv  parallel_scanner.cpp  run_demo.bat  seq_meta.csv  sequential_scanner.cpp  spark_duplicates.py  test.cpp
